@@ -61,7 +61,7 @@ setup_transfer(libtorrent::session* ses1, libtorrent::session* ses2
 	, libtorrent::session* ses3, bool clear_files, bool use_metadata_transfer = true
 	, bool connect = true, std::string suffix = "", int piece_size = 16 * 1024
 	, boost::intrusive_ptr<libtorrent::torrent_info>* torrent = 0, bool super_seeding = false
-	, libtorrent::add_torrent_params const* p = 0);
+	, libtorrent::add_torrent_params const* p = 0, bool stop_lsd = true);
 
 int start_web_server(bool ssl = false, bool chunked = false);
 void stop_web_server();
